# Hermes-v1

./: .gitignore  .pre-commit-config.yaml  AVVIA_HERMES.bat  BWWW_TD_Inv_11_GC_MASTER_REPORT.xlsx  Hermes_App.spec  README.md  README_ita.md  SETUP_LAB.bat  TUTORIAL_STEP_BY_STEP_HERMES_EN_GB.md  custom_botsort.yaml  custom_bytetrack.yaml  hermes_app.py  hermes_architecture_validator.py  hermes_config.json  hermes_context.py  hermes_diagnostics.py  hermes_entity.py  hermes_eye.md  hermes_eye.py  hermes_filters.py  hermes_global_config.default.json  hermes_global_config.json  hermes_human.py  hermes_logic_test.py  hermes_main.py  hermes_master_prof.py  hermes_master_toi.py  hermes_region.py  hermes_reviewer.py  hermes_stats.py  hermes_unified.py  mypy_errors.txt  pyproject.toml  requirements.txt  ruff.md  ruff_errors.txt  setup.bat  struttura_cartella.txt
Configs/Trackers/: custom_botsort.yaml  custom_nessuno.yaml
Models/: fix_weights.py  osnet_ain_x1_0_ready.pt
Prove/prova5/Models/: resnet50_msmt17.pt
Prove/prova5/Output/: AOIs.csv  results_TOIs.tsv  scenevideo_yolo_reid_resnet50_CROPPED_identity.json
Prove/prova5/Profiles/AOI/: BW.json  default_invasion.json
Prove/prova5/Profiles/TOI/: Default_TOI.json  bw_ment.json
Tools/: download_models.py  imgdrawer.py  scan_dir.py
Tools/Converter/: convert_mat_to_csv.m  csvconverter.py  json2mat.py
docs/: hermes_entity.md  hermes_filters.md  hermes_human.md  hermes_master_toi.md  hermes_region.md  hermes_stats.md
profiles/: bw_ment.json
profiles_aoi/: default_invasion.json
todolists/: UX_Roadmap.md
